--- a/configs/Arthur&Athena.config
+++ b/configs/Arthur&Athena.config
@@ -141,3 +141,4 @@ CONFIG_PACKAGE_luci-app-filebrowser-go=y
 # CONFIG_PACKAGE_luci-app-dockerman is not set
 # CONFIG_PACKAGE_luci-app-gecoosac is not set
 # CONFIG_PACKAGE_luci-app-lucky is not set
+# CONFIG_USE_APK is not set
