--- a/configs/Taiyi.config
+++ b/configs/Taiyi.config
@@ -145,3 +145,4 @@ CONFIG_PACKAGE_luci-app-filebrowser-go=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-gecoosac=y
 CONFIG_PACKAGE_luci-app-lucky=y
+# CONFIG_USE_APK is not set
